# message-schema

./: .bashrc  .bazelrc  .cargobin  .clang-format  .dockerignore  .gitignore  .gitmodules  .pylintrc  CMakeLists.txt  MODULE.bazel  Makefile  Makefile.schema  OrbbecSDKConfig_v1.0.xml  README.md  SLAMNAV2.pro  SLAMNAV2.pro.user.0798826  SLAMNAV2.pro.user.136041e  SLAMNAV2.pro.user.2db3d44  SLAMNAV2.pro.user.41e1553  SLAMNAV2.pro.user.4e1f5ba  SLAMNAV2.pro.user.68db646  SLAMNAV2.pro.user.beebb17  SLAMNAV2.pro.user.de8312b  app.json  aruco.cpp  aruco.h  autocontrol.cpp  autocontrol.h  autocontrol.h.autosave  bqr_sensor.cpp  bqr_sensor.h  cam.cpp  cam.h  code_reader.cpp  code_reader.h  comm_coop.cpp  comm_coop.h  comm_cp.cpp  comm_cp.h  comm_data.h  (+77 more)
backend/: .dockerignore  BUILD.bazel  Dockerfile.build  Dockerfile.buildbase  Dockerfile.dev  Dockerfile.prod  Makefile  Procfile.dev  README.md  backend.mk  config.env  docker-compose.preview.yml  docker-compose.yml  host.bin.spec  pyproject.toml  pyrightconfig.json  requirements.in  requirements.txt
backend/data/common/scripts/: C500880_test_new.py  C500920_awawdawd.py  C501880_test_new.py  TEST1_TEST_PLS.py  TEST2_TEST_PLS.py
backend/documents/sdk/docs/source/: conf.py  (+1 more)
backend/host/: config.env  pyproject.toml
backend/host/app/: main.py
backend/services/amr/: config.env  pyproject.toml  requirements.txt
backend/services/amr/app/: main.py
backend/services/common/: config.env  pyproject.toml  requirements.txt  run.py
backend/services/common/app/: main.py
backend/services/common/tests/: test_tcp_forwarder_modbus_proxy.py
backend/services/deploy/: config.env  freeze_entry.py  pyproject.toml  requirements.txt  run.py
backend/services/deploy/app/: main.py
backend/services/host/: config.env  pyproject.toml  run.py
backend/services/host/app/: main.py
backend/services/log/: BUILD.bazel  config.env  pyproject.toml  requirements.txt
backend/services/log/app/: main.py
backend/services/manipulate/: BUILD.bazel  freeze_entry.py  pyproject.toml  requirements.txt  run.py
backend/services/manipulate/app/: main.py
backend/stubs/zenoh/: __init__.pyi
backend/tools/: aggregate_deps.py
example/: BUILD.bazel  state.fbs  state_reader.cc  state_writer.cc
examples/: CMakeLists.txt  README.md  config.json5  error_code.fbs  power_on.fbs  session_call.cpp  session_pub.cpp  session_serve.cpp  session_sub.cpp  state.fbs
examples/rb/v1/: error_code_generated.h  power_on_generated.h  state_generated.h
src/: CMakeLists.txt  SLAMNAV2.pro  SPDLOG_INTEGRATION_README.md  autocontrol.cpp  autocontrol.h  cam.cpp  cam.h  comm_data.h  config.cpp  config.h  dockcontrol.cpp  dockcontrol.h  ekf.cpp  ekf.h  ekf_3d.cpp  ekf_3d.h  error_manager.cpp  error_manager.h  global_defines.h  lidar_2d.cpp  lidar_2d.h  lidar_3d.cpp  lidar_3d.h  lidar_bottom.h  localization.cpp  localization.h  logger.cpp  logger.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  mapping.cpp  mapping.h  mobile.cpp  mobile.h  my_utils.cpp  my_utils.h  obsmap.cpp  obsmap.h  (+16 more)
src/cam/GEMINI2E/: GEMINI2E.cpp  GEMINI2E.h  ORBBEC.cpp  ORBBEC.h
src/cam/ORBBEC/: ORBBEC.cpp  ORBBEC.h
src/comm/: comm_coop.cpp  comm_coop.h  comm_fms.cpp  comm_fms.h  comm_msa.cpp  comm_msa.h  comm_rrs.cpp  comm_rrs.h
src/lidar/AIRY/: airy.cpp  airy.h
src/lidar/COIN_D4/: coin_d4.cpp  coin_d4.h
src/lidar/LAKI/: laki.cpp  laki.h
src/lidar/LIVOX/: livox.cpp  livox.h
src/lidar/RP/: rp_lidar.cpp  rp_lidar.h
src/lidar/SICK/: sick.cpp  sick.h
src/qr_sensor/GLS611/: GLS611.h
src/slamnav-common/: CMakeLists.txt
src/slamnav-common/inc/: comm_data.h  config.h  cv_to_qt.h  error_manager.h  global_defines.h  imu_filter.h  logger.h  my_utils.h  slamnav_common_types.h  timer_queue.h
src/slamnav-common/src/: config.cpp  config.cpp.backup  cv_to_qt.cpp  error_manager.cpp  imu_filter.cpp  logger.cpp  my_utils.cpp
src/slamnav-communication/: CMakeLists.txt
src/slamnav-communication/inc/: comm_fms.h  comm_msa.h  comm_zenoh.h  slamnav_communication_types.h
src/slamnav-communication/src/: comm_fms.cpp  comm_msa.cpp  comm_zenoh.cpp
src/slamnav-communication/src/zenoh_command/: ARCHITECTURE.md  SCHEMA_REFERENCE.md  TEMPLATE.md  TOPICS.md  comm_zenoh_control.cpp  comm_zenoh_control.cpp.bak  comm_zenoh_localization.cpp  comm_zenoh_localization.cpp.bak  comm_zenoh_map.cpp  comm_zenoh_map.cpp.bak  comm_zenoh_move.cpp  comm_zenoh_moveStatus.cpp  comm_zenoh_moveStatus.cpp.bak  comm_zenoh_path.cpp  comm_zenoh_path.cpp.bak  comm_zenoh_sensor.cpp  comm_zenoh_sensor.cpp.bak  comm_zenoh_setting.cpp  comm_zenoh_setting.cpp.bak  comm_zenoh_status.cpp  comm_zenoh_status.cpp.bak  comm_zenoh_update.cpp  comm_zenoh_update.cpp.bak  topics.md
src/slamnav-debug/: CMakeLists.txt
src/slamnav-debug/inc/: sim.h  slamnav_debug_types.h  task.h
src/slamnav-debug/src/: sim.cpp  task.cpp
src/slamnav-map/: CMakeLists.txt
src/slamnav-map/inc/: slamnav_map_types.h  unimap.h
src/slamnav-map/src/: unimap.cpp
src/slamnav-navigation/: CMakeLists.txt
src/slamnav-navigation/inc/: autocontrol.h  dockcontrol.h  policy.h  safety.h  slamnav_navigation_types.h
src/slamnav-navigation/src/: autocontrol.cpp  dockcontrol.cpp  policy.cpp  safety.cpp
src/slamnav-robot/: CMakeLists.txt
src/slamnav-robot/inc/: mobile.h  slamnav_robot_types.h
src/slamnav-robot/src/: mobile.cpp
src/slamnav-sensors/: CMakeLists.txt
src/slamnav-sensors/drivers/: CMakeLists.txt
src/slamnav-sensors/inc/: aruco.h  cam.h  lidar_2d.h  lidar_3d.h  lidar_bottom.h  qr_sensor.h  slamnav_sensor_types.h
src/slamnav-sensors/src/: aruco.cpp  cam.cpp  lidar_2d.cpp  lidar_3d.cpp  lidar_bottom.cpp  qr_sensor.cpp
src/slamnav-slam/: CMakeLists.txt
src/slamnav-slam/inc/: ekf.h  ekf_3d.h  localization.h  mapping.h  nanoflann.hpp  obsmap.h  pgo.h  slam_types.h  slamnav_slam_types.h
src/slamnav-slam/src/: ekf.cpp  ekf_3d.cpp  localization.cpp  mapping.cpp  obsmap.cpp  pgo.cpp  unimap.cpp
src/ui/: CMakeLists.txt
src/ui/inc/: mainwindow.h  slamnav_ui_types.h  tinycolormap.hpp
src/ui/src/: main.cpp  mainwindow.cpp  mainwindow.ui
(+714 files in other folders)
