[project]
name = "rb-backend-server"
version = "0.1.0"
requires-python = ">=3.12,<3.13"
description = "RB Backend Server"
authors = [
    { name = "Derek", email = "dfd1123@rainbow-robotics.com" }
]
readme = "README.md"

[dependency-groups]
dev = [
    "black==25.1.0",
    "ruff==0.12.7",
    "isort==6.0.1",
    "mypy==1.17.1",
    "pytest==8.4.1",
    "honcho>=2.0.0",
    "requests>=2.32.5",
    "sphinx>=9.1.0",
    "sphinx-rtd-theme>=3.1.0",
    "zeroconf>=0.148.0",
]

[tool.uv.workspace]
members = ["services/*", "packages/*", "host"]
exclude = ["packages/__pycache__"]


[tool.black]
line-length = 100
target-version = ["py312"]

[tool.isort]
profile = "black"
line_length = 100
src_paths = ["services", "packages"]

[tool.ruff]
line-length = 100
target-version = "py312"
include = [
    "services/**/*.py",
    "packages/**/*.py"
]
exclude = [
    "**/__pycache__/",
    "**/build/",
    "**/dist/",
    "**/*.egg-info/",
    "packages/rb_flat_buffers/**",
    "packages/rb_schemas/src/rb_schemas/fbs_models/**",
    "**/tests/**"
]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.12"
ignore_missing_imports = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_return_any = true
warn_unused_configs = true
no_implicit_optional = true
strict_optional = true
disallow_untyped_defs = false
check_untyped_defs = true
pretty = true
namespace_packages = true
disable_error_code = ["import-untyped"]
explicit_package_bases = true

exclude = [
    "packages/rb_flat_buffers/",
    ".*/tests/",
]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["services", "packages"]

[[tool.mypy.overrides]]
module = [
    "flatbuffers.*",
    "psutil",
    "socketio.*",
    "zenoh",
]
ignore_missing_imports = true
ignore_errors = true
follow_imports = "skip"
